fix the layout issue, change the scroll bar, implemented entire comment feature

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,20 @@
 body {
   background-color: #F9F9F9;
 }
+/* ::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+} */
+
